Backport fix for #77381 (Cleanly terminate network threads).

BUG: 77381

svn path=/branches/KDE_3_4_BRANCH/kdepim/; revision=401283